@@ -21,11 +21,13 @@ export class DialogController extends Controller<HTMLElement> {
     theme: { default: '', type: String },
   };
 
-  static targets = ['body'];
+  static targets = ['body', 'notify'];
 
   declare dialog: A11yDialog;
   declare readonly bodyTarget: HTMLElement;
   declare readonly themeValue: string;
+  /** Optional targets that will be dispatched events for key dialog events. */
+  declare readonly notifyTargets: HTMLElement[];
 
   connect() {
     this.dialog = new A11yDialog(this.element);
@@ -34,13 +36,32 @@ export class DialogController extends Controller<HTMLElement> {
     this.dialog
       .on('show', () => {
         if (!isFloating) document.documentElement.style.overflowY = 'hidden';
-        this.dispatch('shown', { detail });
+        this.dispatch('shown', { detail, cancelable: false });
+        this.notifyTargets.forEach((target) => {
+          this.dispatch('shown', {
+            target,
+            bubbles: false,
+            cancelable: false,
+          });
+        });
       })
       .on('hide', () => {
         if (!isFloating) document.documentElement.style.overflowY = '';
-        this.dispatch('hidden', { detail });
+        this.dispatch('hidden', { detail, cancelable: false });
+        this.notifyTargets.forEach((target) => {
+          this.dispatch('hidden', {
+            target,
+            bubbles: false,
+            cancelable: false,
+          });
+        });
       });
     this.dispatch('ready', { detail });
+    if (this.notifyTargets && Array.isArray(this.notifyTargets)) {
+      this.notifyTargets.forEach((target) => {
+        this.dispatch('ready', { target, bubbles: false, cancelable: false });
+      });
+    }
     return this.dialog;
   }
 
